test/errors/traits/no_matching_instance_found/main.sk
module Main {

class Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

class Baz {

}

instance Bar[Baz] {
    fn bar(self) -> () {

    }
}

// instance Bar[Foo] {
//     fn bar(self) -> () {

//     }
// }

fn main() {
    let f = Foo();
    f.bar();
}

}